@@ -18,7 +18,7 @@
  *  along with The Mana World; if not, write to the Free Software
  *  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- *  $Id: itemdb.h 2650 2006-09-03 15:00:47Z b_lindeijer $
+ *  $Id$
  */
 
 #ifndef _TMW_ITEM_MANAGER_H
