@@ -5,6 +5,13 @@
 	* data/graphics/gui/CMakeLists.txt, data/graphics/gui/Makefile.am:
 	Added close button and item shortcut backgrounds to files that will be
 	installed.
+	* src/gui/itemshortcutcontainer.cpp: Make sure mGridWidth and
+	mGridHeight are initialized properly (fixes arithmetic exception in
+	ItemShortcutContainer::draw).
+	* src/keyboardconfig.cpp: Changed default sitting key back to 's'.
+	* src/net/equipmenthandler.cpp: Removed a line that attempted to set
+	the player's weapon sprite with each kind of equipment. Seems to work
+	fine without as well.
 
 2007-08-22  Philipp Sehmisch  <tmw@crushnet.org>
 
